Fix display jump

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     flex-direction: inherit;
     justify-content: inherit;
     flex: 1;
-    min-height: 28.666px;
+    min-height: 28.666666px;
     word-spacing: -6px;
 }
 
@@ -87,7 +87,7 @@ body {
     justify-content: inherit;
     flex: 1.5;
     overflow-wrap: break-word;
-    min-height: 57.333px;
+    min-height: 57.333333px;
 
 }
 
